versioned_docs/version-4.13.0/api/4_s2s/globalstats/readglobalstatsforcategory.md
# ReadGlobalStatsForCategory
## Overview
Method retrieves the global statistics for the given category.

<PartialServop service_name="globalGameStatistics" operation_name="READ_FOR_CATEGORY" / >

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp
// S2S call: to view example, switch to the Cloud Code or Raw tab.
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
// S2S call: to view example, switch to the Cloud Code or Raw tab.
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Objective-C">
```

```objectivec
// S2S call: to view example, switch to the Cloud Code or Raw tab.
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
// S2S call: to view example, switch to the Cloud Code or Raw tab.
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
// S2S call: to view example, switch to the Cloud Code or Raw tab.
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```cfscript
var category = "generated";
var globalStatisticsProxy = bridge.getGlobalStatisticsServiceProxy();

var postResult = globalStatisticsProxy.readGlobalStatsForCategory(category);
if (postResult.status == 200) {
    // Success!
}
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```r
{
	"service": "globalGameStatistics",
	"operation": "READ_FOR_CATEGORY",
	"data": {
		"category": "generated"
	}
}
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

<details>
<summary>JSON Response</summary>

```json
{
  "data": {
    "statistics": {
      "ESTIMATE": 5,
      "HIGHESTHR": 4,
      "INNING": 2,
      "INNINGSREM": 0,
      "INNINGnew": 1,
      "OUTS": 0,
      "PLAYERS": 8,
      "PLAYER_COUNT": 4,
      "PLAYER_COUNTa": 1,
      "POINT": 1,
      "POINTS": 11,
      "otherstat": 0
    }
  },
  "status": 200
}
```
</details>

## Method Parameters
Parameter | Description
--------- | -----------
category | The global statistics category. 


